--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display+SC:wght@400;500&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" type="text/css" href="css/style.css"/> 
-  <title>Animais Fantásticos</title>
+  <title>Animais Fantásticos 2</title>
 </head>
 <body>
   <nav class="menu">
